# brick-xlsx-generator

./: README.md  TEMPLATE.xlsx  example.py  pyproject.toml
brick_xlsx_generator/: __init__.py  graph.py  relationships.py
brick_xlsx_generator/modules/: helpers.py  sparql_queries.py  triple_generator.py
brick_xlsx_generator/ontologies/Switch/1.0/: Brick-SwitchExtension.ttl
