[tool.poetry]
name = "brick-xlsx-generator"
version = "0.1.0"
description = "Generate Brick models from xlsx files. Supports custom namespaces and extensions."
authors = ["wcrd <11898748+wcrd@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.5"
rdflib = "^5.0.0"
# xlrd = ">=1.2.0"
openpyxl = "^3.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
